Alright! Looking good. Now I can start to build up my simulation stuff. Feels good.

--- a/tcf/test_flipflop/Makefile
+++ b/tcf/test_flipflop/Makefile
@@ -4,25 +4,26 @@ TOPLEVEL_LANG ?= verilog
 WPWD=$(shell sh -c 'pwd -W')
 PWD=$(shell pwd)
 POWLIB=$(PWD)/../..
-COCOTB=$(POWLIB)/cocotb
+COCOTB=$(POWLIB)/cocotb/
+SIM=icarus
 
 ifeq ($(OS),Msys)
 WPWD=$(shell sh -c 'pwd -W')
-PYTHONPATH := $(POWLIB)/sim;$(PYTHONPATH)
+PYTHONPATH := $(PWD)/../cosim;$(PYTHONPATH)
 else
 WPWD=$(shell pwd)
-PYTHONPATH := $(POWLIB)/sim;$(PYTHONPATH)
+PYTHONPATH := $(PWD)/../cosim:$(PYTHONPATH)
 endif
 
 ifeq ($(TOPLEVEL_LANG),verilog)
-    VERILOG_SOURCES = $(POWLIB)/hdl/*.v
+    VERILOG_SOURCES = $(POWLIB)/hdl/*.v $(PWD)/test_flipflop.v
     COMPILE_ARGS = -g 2001 -I $(POWLIB)/hdl/
-    TOPLEVEL = powlib_std
+    TOPLEVEL = test_flipflop
 else
     $(error "A valid value (verilog or vhdl) was not provided for TOPLEVEL_LANG=$(TOPLEVEL_LANG)")
 endif
 
-MODULE=powlib_flipflop
+MODULE=test_flipflop
 
 include $(COCOTB)/makefiles/Makefile.inc
 include $(COCOTB)/makefiles/Makefile.sim
