Okay. I think I understand the file structure now.

--- a/tcf/test_flipflop/Makefile
+++ b/tcf/test_flipflop/Makefile
@@ -6,16 +6,16 @@ PWD=$(shell pwd)
 POWLIB=$(PWD)/../..
 COCOTB=$(POWLIB)/cocotb/
 SIM=icarus
-CUSTOM_SIM_DEPS = $(shell find $(POWLIB)/sim/ -name "*.py")
+#CUSTOM_SIM_DEPS = $(shell find $(POWLIB)/sim/ -name "*.py")
 
 $(info [$(CUSTOM_SIM_DEPS)])
 
 ifeq ($(OS),Msys)
 WPWD=$(shell sh -c 'pwd -W')
-PYTHONPATH := $(POWLIB)/sim/powlib;$(PYTHONPATH)
+PYTHONPATH := $(POWLIB)/sim;$(PYTHONPATH)
 else
 WPWD=$(shell pwd)
-PYTHONPATH := $(POWLIB)/sim/powlib:$(PYTHONPATH)
+PYTHONPATH := $(POWLIB)/sim:$(PYTHONPATH)
 endif
 
 ifeq ($(TOPLEVEL_LANG),verilog)
