Making some progress. I think the flip flop, for some reason isn't writing anything.

--- a/tcf/test_flipflop/Makefile
+++ b/tcf/test_flipflop/Makefile
@@ -6,7 +6,6 @@ PWD=$(shell pwd)
 POWLIB=$(PWD)/../..
 COCOTB=$(POWLIB)/cocotb/
 SIM=icarus
-#CUSTOM_SIM_DEPS = $(shell find $(POWLIB)/sim/ -name "*.py")
 
 $(info [$(CUSTOM_SIM_DEPS)])
 
@@ -20,10 +19,10 @@ endif
 
 ifeq ($(TOPLEVEL_LANG),verilog)
     VERILOG_SOURCES = $(POWLIB)/hdl/*.v $(PWD)/test_flipflop.v
-    COMPILE_ARGS = -g 2001 -I $(POWLIB)/hdl/
+    COMPILE_ARGS = -g 2001 -I $(POWLIB)/hdl/     
     TOPLEVEL = test_flipflop
 else
-    $(error "A valid value (verilog or vhdl) was not provided for TOPLEVEL_LANG=$(TOPLEVEL_LANG)")
+    $(error "A valid value (verilog) was not provided for TOPLEVEL_LANG=$(TOPLEVEL_LANG)")
 endif
 
 MODULE=test_flipflop
