Separated the sim library out as its own repository.

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,4 +4,7 @@
 [submodule "hdl"]
     path = hdl
     url = https://github.com/powlib/hdl
+[submodule "sim"]
+    path = sim
+    url = https://github.com/powlib/sim    
 
