Separated out the tcf regression. Gonna work on writing a makefile that runs all the regressions.

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,4 +7,8 @@
 [submodule "sim"]
     path = sim
     url = https://github.com/powlib/sim    
+[submodule "tcf"]
+    path = tcf
+    url = https://github.com/powlib/tcf    
+
 
