Updated cocotb submodule to point to the original repo. Updated sim repo with some fixes and extra comments. Fixed tcf regressions.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "cocotb"]
 	path = cocotb
-	url = https://github.com/powlib/cocotb
+	url = https://github.com/potentialventures/cocotb
 [submodule "hdl"]
     path = hdl
     url = https://github.com/powlib/hdl
